@@ -2,6 +2,9 @@
 - Fix shift + mouse wheel horizontal scrolling on windows
 - Fixed bug when looping drums
 - Support reading files with accents in their name on Windows
+- Improve printing by setting appropriate caps to measure bars
+- Work around wxGCDC bug to ensure that lines are of the correct thickness when printing
+- Fix rare memory leak
 - Further tweak fonts on Windows
 
 1.3 beta 6
